--- a/composer.json
+++ b/composer.json
@@ -16,7 +16,7 @@
         "homepage": "http://jmrainwater.com"
     },
     "require": {
-        "php": ">=7.2",
+        "php": "^8.0",
         "illuminate/support": "~5.6|~5.7|~5.8|^6.0|^7.0|^8.0|^9.0"
     },
     "require-dev": {
